test coverage finished for TutorService